[package]
name = "rust_modules"
version = "0.1.0"
description = "excercise to learn rust programming"
license= "MIT"
authors = ["bimal kaluarachchi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
syntex = "^0.58"


[dependencies]
image = "0.24.6"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "fibonachi"
harness = false